# edupro-sms

./: .frapperc.json  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  COMPREHENSIVE_TESTING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DESIGN.md  FINAL_INTEGRATION_STATUS.md  HOW_TO_ADD_COURSES_MOODLE.md  INSTALLATION_GUIDE.md  LOGIN_CREDENTIALS.md  MOODLE_INTEGRATION_COMPLETE.md  MOODLE_STATUS.md  PHASE_1_TASKS.md  PHASE_1_TESTING.md  PHASE_2_FEATURE_3_TESTS.md  PHASE_2_FEATURE_4_TESTS.md  PHASE_2_PLANNING.md  PHASE_2_TASKS.md  PHASE_3_TASKS.md  PRODUCT.md  QUICK_START_MOODLE.md  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY.txt  TEST_INTEGRATION_FINAL.md  USER_QUICKSTART.md  add_lan_firewall_rule.ps1  admin_provisioning.py  apps.txt  backup_daily.ps1  complete-cleanup.ps1  dashboard.py  fresh-install-v15.ps1  hooks.py  pyproject.toml  register_daily_backup_task.ps1  setup.py  setup_moodle_integration.py  student_hooks.py  (+2 more)
.claude/: CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  DECISIONS.md  PROJECT_CONTEXT.md  TASKS.md
ai-tools-store/: index.html  robots.txt  sitemap.xml
archive/: FIRST_TIME_SETUP.md  PHASE_1_TASKS.md  PHASE_2_FEATURE_2_TESTS.md  PHASE_2_FEATURE_5_TESTS.md  PHASE_2_INTEGRATION_TESTS.md  PHASE_2_TASKS.md  PHASE_3_FEATURE_7_TESTS.md  PHASE_3_FEATURE_9_TESTS.md  PHASE_3_PLANNING.md  PHASE_3_TASKS.md  TROUBLESHOOTING_GUIDE.md  VERSION_1_1_PLANNING.md
backups/: 20260712_013402-edupro_localhost-files.tar  20260712_013402-edupro_localhost-private-files.tar  20260712_013402-edupro_localhost-site_config_backup.json
docs/: 01_Project_Overview.md  02_Database.md  03_DocTypes.md  04_Workflows.md  05_Print_Formats.md  06_Email_System.md  07_Testing.md  08_Deployment.md  09_API.md  10_User_Guide.md  11_Roles_And_Permissions.md  12_Finance_Billing.md  13_Backup_Restore.md
edupro_sms/: .frapperc.json  _tmp_qa_strain_cleanup.py  admin_provisioning.py  automate_moodle_sync_test.py  batch_billing_api.py  batch_print_api.py  bursar_reports_api.py  bursar_student_management.py  class_review.py  grading.py  hooks.py  import_handler.py  import_parser.py  marks_entry.py  modules.txt  package.json  qr.py  student_portal_api.py  (+2 more)
(+154 files in other folders)
