[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "edupro_sms"
authors = [{name = "ttshava", email = "ttshava@gmail.com"}]
description = "Edupro School Management System - IGCSE Academic Reporting and Finance"
requires-python = ">=3.11"
version = "0.0.1"
dependencies = []

[project.urls]
Homepage = "https://github.com/ttshava/edupro-sms"
Documentation = "https://github.com/ttshava/edupro-sms/wiki"
Repository = "https://github.com/ttshava/edupro-sms.git"

[tool.bench.frappe-dependencies]
frappe = ">=15.0,<16"
erpnext = ">=15.0,<16"
education = ">=15.0,<16"
