[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "edupro-sms"
version = "0.0.1"
description = "Edupro School Management System - IGCSE Academic Reporting and Finance"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Edupro", email = "ttshava@gmail.com"}]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/ttshava/edupro-sms"
Repository = "https://github.com/ttshava/edupro-sms.git"

[tool.bench.frappe-dependencies]
frappe = ">=15.0,<17"
erpnext = ">=15.0,<17"
education = ">=15.0,<17"

[tool.frappe.build]
# Frontend assets build configuration for esbuild
packages = [
	{ "name": "edupro_sms", "public": true }
]
