[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edupro_sms"
version = "0.0.1"
description = "Edupro School Management System - IGCSE Academic Reporting and Finance"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Edupro", email = "ttshava@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "qrcode",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/ttshava/edupro-sms"

[tool.setuptools.packages.find]
include = ["edupro_sms", "edupro_sms.*"]

[tool.bench.frappe-dependencies]
frappe = ">=15.0,<17"
erpnext = ">=15.0,<17"
education = ">=15.0,<17"
